# mujibswap

./: .dockerignore  Dockerfile  main.py  pyproject.toml
static/: app.js  style.css
templates/: index.html
